--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@tsparticles/slim": "^3.4.0",
     "antd": "^5.16.4",
     "axios": "^1.6.8",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "json-server": "^1.0.0-alpha.23",
     "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-scripts": "5.0.1",
     "sass": "^1.75.0",
     "web-vitals": "^2.1.4"
