--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.6.8",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "json-server": "^1.0.0-alpha.23",
+    "moment": "^2.30.1",
     "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
