--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.8",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "echarts": "^5.5.0",
     "html-to-draftjs": "^1.5.0",
     "json-server": "^1.0.0-alpha.23",
     "moment": "^2.30.1",
